--- a/smart-exchange-movil/src/app/mis-operaciones/mis-operaciones.page.scss
+++ b/smart-exchange-movil/src/app/mis-operaciones/mis-operaciones.page.scss
@@ -40,8 +40,8 @@
     position: absolute;
     text-transform: uppercase;
     font-size: 0.6em;
-    bottom: 0.3em;
-    right: 1em;
+    bottom: -1em;
+    right: 0em;
     padding: 1px 4px;
     border-radius: 7px;
 }
@@ -76,4 +76,50 @@
         background: #1f8b4c !important;
     }
 }
-    
+table{
+    width: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+}
+table ion-icon {
+    font-size: 1.8em;
+}
+table tr td:nth-child(odd), table tr th:nth-child(odd) {
+    //background-color: #f9f9f9;
+    //background-color: #f2f2f2;
+}  
+table tr td:nth-child(even), table tr th:nth-child(even){
+    //background-color: #ddd;
+    //background-color: #f2f2f2;
+}
+table th, table td{
+    text-align: center;
+    color: #92949c;
+    font-size: 0.7em;
+    text-transform: uppercase;
+}
+table th{
+    padding-top: 0.6em;
+}
+ion-card{
+    margin-left: 0;
+    margin-right: 0;
+}
+ion-card-header{
+    padding: 2px;
+}
+ion-card-content{
+    padding: 0 0 0.5em 0 !important;
+}
+ion-card-title{
+    margin: 0;
+}
+.item-native, .item-inner{
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+}
+ion-item-option div {
+    position: absolute;
+    bottom: 28%;
+    font-size: 0.6em;
+}
