--- a/smart-exchange-movil/src/app/operacion-cuentas/operacion-cuentas.component.html
+++ b/smart-exchange-movil/src/app/operacion-cuentas/operacion-cuentas.component.html
@@ -10,7 +10,7 @@
   <div class="contenido">
     <ion-card class="cuentas detalle-origen">
       <ion-card-header>
-        <ion-card-title>Nos transfiere desde:</ion-card-title>
+        <ion-card-title><ion-icon name="person"></ion-icon> Nos transfiere desde:</ion-card-title>
         <!-- <ion-card-subtitle>Nos transfiere desde:</ion-card-subtitle> -->
       </ion-card-header>
     
@@ -49,8 +49,8 @@
 
     <ion-card class="cuentas detalle-transferencia">
       <ion-card-header>
-        <!-- <ion-card-title>Card Title</ion-card-title> -->
-        <ion-card-subtitle>A LC Exchange:</ion-card-subtitle>
+        <ion-card-title><img src='assets/img/logo.png' alt=""> A la cuenta</ion-card-title>
+        <!--ion-card-subtitle><img src='assets/img/logo.png' alt=""> A la cuenta</ion-card-subtitle-->
       </ion-card-header>
     
       <ion-card-content>
@@ -88,7 +88,7 @@
 
     <ion-card class="cuentas detalle-destino">
       <ion-card-header>
-        <ion-card-title>Recibe su dinero en:</ion-card-title>
+        <ion-card-title><ion-icon name="person"></ion-icon> Recibe su dinero en:</ion-card-title>
         <!-- <ion-card-subtitle>Le transferiremos a:</ion-card-subtitle> -->
       </ion-card-header>
     
