--- a/smart-exchange-movil/src/app/mis-operaciones/mis-operaciones.page.html
+++ b/smart-exchange-movil/src/app/mis-operaciones/mis-operaciones.page.html
@@ -54,15 +54,21 @@
             </ion-label>
           </ion-item>
           <ion-item-options side="start">
-            <ion-item-option color="secondary">
-              <ion-icon slot="icon-only" name="create"></ion-icon>
-              <div>Editar</div>
+            <div class="titulo">COMPROBANTE CLIENTE</div>
+            <ion-item-option (click)="cargarComprobante(item.id)" color="secondary">
+              <ion-icon slot="icon-only" name="cloud-upload"></ion-icon>
+              <div>Carga</div>
+            </ion-item-option>
+            <ion-item-option (click)="recuperarComprobante(item.id, 1)" [disabled]="!item.codigoTransferencia" color="secondary">
+              <ion-icon slot="icon-only" name="cloud-download"></ion-icon>
+              <div>Descarga</div>
             </ion-item-option>
           </ion-item-options>
-          <ion-item-options side="end">
-            <ion-item-option color="primary">
-              <ion-icon slot="icon-only" name="checkmark-circle"></ion-icon>
-              <div>Activar</div>
+          <ion-item-options side="end" *ngIf="item.codigoTransferenciaEmpresa">
+            <div class="titulo-empresa">COMPROBANTE <br> EMPRESA</div>
+            <ion-item-option (click)="recuperarComprobante(item.id, 2)" color="primary">
+              <ion-icon slot="icon-only" name="cloud-download"></ion-icon>
+              <div>Descarga</div>
             </ion-item-option>
           </ion-item-options>
         </ion-item-sliding>
