--- a/smart-exchange-movil/src/global.scss
+++ b/smart-exchange-movil/src/global.scss
@@ -35,6 +35,9 @@
     bottom: 4em;
     right: 1em;
     z-index: 100;
+    background: rgba(255,255,255,0.9);
+    padding: 0.3em;
+    border-radius: 50%;
 }
 .whatsapp ion-icon{
     font-size: 3em;
