--- a/smart-exchange-movil/src/app/login/login.page.scss
+++ b/smart-exchange-movil/src/app/login/login.page.scss
@@ -73,3 +73,8 @@ ion-item{
     border: 1px solid #2d47af;
     border-radius: 0.5em;
 }
+.biometrico{
+    text-align: center;
+    color: var( --ion-color-primary);
+    font-size: 0.7em;
+}
