--- a/smart-exchange-movil/src/app/mis-operaciones/mis-operaciones.page.html
+++ b/smart-exchange-movil/src/app/mis-operaciones/mis-operaciones.page.html
@@ -73,7 +73,7 @@
           </ion-item-options>
         </ion-item-sliding>
       </ion-card>
-      <div class="spinner" *ngIf="estaCargando2 && !estaCargando">
+       <div class="spinner" *ngIf="estaCargando2">
         <ion-progress-bar type="indeterminate"></ion-progress-bar>
       </div>
     </div>
