--- a/smart-exchange-movil/src/app/login/login.page.html
+++ b/smart-exchange-movil/src/app/login/login.page.html
@@ -36,11 +36,11 @@
   </div>
   <div class="aux-buttons">
     <div class="aux">
-      <ion-icon name="key"></ion-icon><br>
+      <ion-icon size="large" name="key"></ion-icon><br>
       <small>OLVIDÉ MI CONTRASEÑA</small>
     </div>
     <div class="aux">
-      <ion-icon name="mail-unread"></ion-icon><br>
+      <ion-icon size="large" name="mail-unread"></ion-icon><br>
       <small>CONFIRMAR MI CORREO</small>
     </div>
   </div>
