--- a/smart-exchange-movil/src/app/mis-operaciones/mis-operaciones.page.html
+++ b/smart-exchange-movil/src/app/mis-operaciones/mis-operaciones.page.html
@@ -9,7 +9,7 @@
             <ion-label>
               <ion-card-header>
                 <ion-card-subtitle>
-                  <small>{{item.fechaCreacion | date: 'dd/MM/yyyy HH:mm'}}</small>
+                  {{item.fechaCreacion | date: 'dd/MM/yyyy HH:mm'}}
                 </ion-card-subtitle>
                 <ion-card-title>
                   <b><small>Ticket: {{item.ticket}}</small></b>
