--- a/smart-exchange-movil/src/app/lista-cuentas-bancarias/lista-cuentas-bancarias.page.html
+++ b/smart-exchange-movil/src/app/lista-cuentas-bancarias/lista-cuentas-bancarias.page.html
@@ -13,7 +13,7 @@
                 <ion-label>
                   <ion-card-header>
                     <ion-card-subtitle>
-                      <small>{{item.nombre}}</small>
+                      {{item.nombre}}
                     </ion-card-subtitle>
                     <ion-card-title>
                       <small><b>{{item.bancoNombre}}</b></small>
@@ -21,7 +21,7 @@
                   </ion-card-header>
                   <ion-card-content>
                     <table>
-                      <tr><th>Moneda</th><th>Nro cuenta</th><th>Tipo cuenta</th></tr>
+                      <tr><th>Moneda</th><th>Nro. cuenta</th><th>Tipo cuenta</th></tr>
                       <tr><td>{{recuperaNombre(item.moneda)}}</td><td>{{item.numeroCuenta}}</td><td>{{buscarNombreDeTipoCuenta(item.tipoCuenta)}}</td></tr>
                     </table>
                     <div class="estado" [class]="item.activo?'activo-estado':'deshabilitado-estado'">{{item.activo?'Activo':'Inactivo'}}</div>
