--- a/smart-exchange-movil/src/app/operacion/operacion.component.html
+++ b/smart-exchange-movil/src/app/operacion/operacion.component.html
@@ -1,6 +1,6 @@
 <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="cancel()" color="medium">
+      <ion-button (click)="cancel()" color="medium" size="large">
         <ion-icon name="close-circle"></ion-icon>
       </ion-button>
     </ion-buttons>
