--- a/smart-exchange-movil/src/app/configuraciones/configuraciones.component.scss
+++ b/smart-exchange-movil/src/app/configuraciones/configuraciones.component.scss
@@ -1,6 +1,6 @@
 ion-buttons ion-icon{
     font-size: 3em;
 }
-.icono-bio {
-    vertical-align: bottom;
+.icono-config {
+    vertical-align: middle;
 }
