--- a/smart-exchange-movil/src/app/explore-container/explore-container.component.html
+++ b/smart-exchange-movil/src/app/explore-container/explore-container.component.html
@@ -12,7 +12,13 @@
       <ion-icon name="grid"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="bottom">
-      <ion-fab-button (click)="configuraciones()" color="primary" size="x-large">
+      <ion-fab-button color="primary" size="large">
+        <ion-icon name="notifications"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button (click)="datosPersonales()" color="primary" size="large">
+        <ion-icon name="person"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button (click)="configuraciones()" color="primary" size="large">
         <ion-icon name="settings"></ion-icon>
       </ion-fab-button>
       <ion-fab-button href="/login" color="danger"  size="large">
