--- a/smart-exchange-frnt/src/app/registrate/registrate.component.sass
+++ b/smart-exchange-frnt/src/app/registrate/registrate.component.sass
@@ -60,6 +60,27 @@ h4
     animation-delay: 12s
 .primero
     display: none
+.tipos-de-cambios
+    border-radius: 7px
+    background: white
+    color: #747373
+    width: 80%
+    margin: auto
+    text-align: center
+    font-size: 0.7em
+    overflow: hidden
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 1px 2px 15px -3px rgba(0,0,0,0)
+    box-shadow: 0px 10px 13px -7px #000000, 1px 2px 15px -3px rgba(0,0,0,0)
+    table
+        width: 100%
+        border-collapse: collapse
+table, th, td
+    border: none
+.lc td
+    background: #47be11
+    color: white
+td img
+    max-height: 1.5em
 @keyframes deslizar
     0%, 20%, 100%
         opacity: 0
