--- a/smart-exchange-frnt/src/app/ui-utils/imagen/imagen.component.html
+++ b/smart-exchange-frnt/src/app/ui-utils/imagen/imagen.component.html
@@ -10,7 +10,9 @@
     <mat-card-content>
         <lib-ngx-image-zoom 
             [thumbImage]="imagen" 
-            [fullImage]="imagen">
+            [fullImage]="imagen" class="ramiro"
+            zoomMode="click"
+            zoomRatio="5">
     </lib-ngx-image-zoom>
 
     </mat-card-content>
