--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -194,7 +194,7 @@ mat-form-field, mat-slide-toggle
 .copiar
     cursor: pointer
 ///colores para estado de operaciones
-.op-est-preliminar, .op-est-activo, .op-est-en-curso, .op-est-anulado, .op-est-finalizado
+.op-est-preliminar, .op-est-activo, .op-est-en-curso, .op-est-anulado, .op-est-finalizado, .op-est-finalizado-sin-sunat
     color: #ffffff !important
     text-transform: uppercase
     font-size: 0.8em
@@ -212,6 +212,9 @@ mat-form-field, mat-slide-toggle
     background: #686967 !important
 .op-est-finalizado
     background: #1f8b4c !important
+.op-est-finalizado-sin-sunat
+    background: #1f8b4c !important
+    border: 2px #f03535 solid
 @media (max-width: 1000px)
     .contenido-general
         width: 80%
