--- a/smart-exchange-frnt/src/app/confirma/confirma.component.sass
+++ b/smart-exchange-frnt/src/app/confirma/confirma.component.sass
@@ -4,3 +4,12 @@
     text-align: center
 .confirma-component button
     color: #ffffff
+@media (max-width: 1300px)
+    .confirma-component
+        width: 70%
+@media (max-width: 900px)
+    .confirma-component
+        width: 80%
+@media (max-width: 700px)
+    .confirma-component
+        width: 90%
