--- a/smart-exchange-movil/src/app/login/login.page.html
+++ b/smart-exchange-movil/src/app/login/login.page.html
@@ -1,47 +1,50 @@
 <ion-content [fullscreen]="true" class="background">
-  <div class="logo">
-    <img src='assets/img/logo3.png' alt="">
-  </div>
-  <div class="formulario">
-    <h4 class="titulo">¡NOS ALEGRA VERTE!</h4> 
-    <form  [formGroup]="loginForm" (ngSubmit)="login()">
-      <mat-form-field appearance="outline">
-        <mat-label>Ingrese su correo/usuario</mat-label>
-        <input matInput type="text" formControlName="username">
-      </mat-form-field>
-      <mat-form-field appearance="outline">
-        <mat-label>Contraseña</mat-label>
-        <input matInput [type]="hide?'password':'text'" formControlName="password">
-        <mat-icon class="pointer" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-      </mat-form-field>
-      <!-- <ion-list>
-        <ion-item>
-          <ion-input formControlName="username" placeholder="correo@gmail.com"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-input formControlName="password"  placeholder="Contraseña"></ion-input>
-        </ion-item>
-      </ion-list> -->
-      <ion-button type="submit" expand="Block" shape="round">Iniciar sesión</ion-button>
-      <ion-button type="reset" expand="Block" shape="round" color="secondary">Cancelar</ion-button>
-      <div class="biometrico" *ngIf="biometricoEstaConfigurado">
-        <ion-button (click)="leeBiometrico()" fill="clear" type="button">
-          <ion-icon size="large" name="finger-print"></ion-icon>
-        </ion-button>
-        Autenticación con biometría
-      </div>
-      <div class="registrate">¿Aún no tienes cuenta?</div>
-      <ion-button href="/registrate" type="button" expand="Block" shape="round">Regístrate</ion-button>
-    </form>
-  </div>
-  <div class="aux-buttons">
-    <div class="aux">
-      <ion-icon size="large" name="key"></ion-icon><br>
-      <small>OLVIDÉ MI CONTRASEÑA</small>
+  <div class="adorno"></div>
+  <div class="contenido">
+    <div class="logo">
+      <img src='assets/img/logo3.png' alt="">
     </div>
-    <div class="aux">
-      <ion-icon size="large" name="mail-unread"></ion-icon><br>
-      <small>CONFIRMAR MI CORREO</small>
+    <div class="formulario">
+      <h4 class="titulo">¡NOS ALEGRA VERTE!</h4> 
+      <form  [formGroup]="loginForm" (ngSubmit)="login()">
+        <mat-form-field appearance="outline">
+          <mat-label>Ingrese su correo/usuario</mat-label>
+          <input matInput type="text" formControlName="username">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Contraseña</mat-label>
+          <input matInput [type]="hide?'password':'text'" formControlName="password">
+          <mat-icon class="pointer" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </mat-form-field>
+        <!-- <ion-list>
+          <ion-item>
+            <ion-input formControlName="username" placeholder="correo@gmail.com"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-input formControlName="password"  placeholder="Contraseña"></ion-input>
+          </ion-item>
+        </ion-list> -->
+        <ion-button type="submit" expand="Block" shape="round">Iniciar sesión</ion-button>
+        <ion-button type="reset" expand="Block" shape="round" color="secondary">Cancelar</ion-button>
+        <div class="biometrico" *ngIf="biometricoEstaConfigurado">
+          <ion-button (click)="leeBiometrico()" fill="clear" type="button">
+            <ion-icon size="large" name="finger-print"></ion-icon>
+          </ion-button>
+          Autenticación con biometría
+        </div>
+        <div class="registrate">¿Aún no tienes cuenta?</div>
+        <ion-button href="/registrate" type="button" expand="Block" shape="round">Regístrate</ion-button>
+      </form>
+    </div>
+    <div class="aux-buttons">
+      <div class="aux" (click)="cuentasAux(1)">
+        <ion-icon size="large" name="key"></ion-icon><br>
+        <small>OLVIDÉ MI CONTRASEÑA</small>
+      </div>
+      <div class="aux" (click)="cuentasAux(2)">
+        <ion-icon size="large" name="mail-unread"></ion-icon><br>
+        <small>CONFIRMAR MI CORREO</small>
+      </div>
     </div>
   </div>
 </ion-content>
