--- a/smart-exchange-frnt/src/app/registrate/registrate.component.html
+++ b/smart-exchange-frnt/src/app/registrate/registrate.component.html
@@ -62,7 +62,7 @@
     <div class="derecho3">
         <div class="contenido-der3">
             <div class="logo-log-reg3">
-                <img src='assets/img/logofooter.png' alt="">
+                <img src='assets/img/logofooter-test.png' alt="">
             </div><br>
             <div class="tipos-de-cambios">
                 <table *ngIf="lcExchange && banco">
